# kit_utiles

./: .coveragerc  .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
models/: __init__.py
notebooks/: __init__.py
src/kit_utiles/: __init__.py  cli.py  files.py  io_utils.py  numbers.py  strings.py
tests/: conftest.py  test_cov01_numbers_exceptions.py  test_cov02_cli_cases.py  test_cov03_files_more.py  test_cov04_strings_extra.py  test_cov05_numbers_boundaries.py  test_cov06_strings_edges.py  test_cov07_cli_variants.py  test_cov08_files_more_branches.py  test_cov09_strings_strip_accents_internal.py  test_cov10_numbers_sum_precision_large.py  test_cov11_strings_word_count_more.py  test_cov12_numbers_is_leap_year_edges.py  test_cov13_files_alias_roundtrip.py  test_cov14_strings_validate_email_extremos.py  test_e01_sum_list.py  test_e02_unique_sorted.py  test_e03_leap_year.py  test_e04_safe_divide.py  test_e05_word_count.py  test_e06_file_roundtrip.py  test_e07_mean.py  test_e08_cli_sum.py  test_e09_validate_email.py  test_e10_grade.py  test_e11_sum_list_neg_floats.py  test_e12_unique_sorted_strings.py  test_e13_safe_divide_types.py  test_e14_word_count_accents_punct.py  test_e15_load_lines_empty_and_nested.py  test_e16_mean_precision.py  test_e17_cli_spaces_and_empty.py  test_e18_cli_spaces_and_empty_bis.py  test_e19_validate_email_subdomains.py  test_e20_grade_edges_more.py
